Added alot of changes

--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -1,4 +1,34 @@
 {
-    "friend": "приятел"
-
+    "friend": "приятел",
+    "mobile_device": "мобилно устройство",
+    "desktop_device": "настолно устройство",
+    "log_in": "Влез",
+    "register": "Създай акаунт",
+    "register_new": "Създай нов акаунт",
+    "or": "или",
+    "log_out": "Излез",
+    "project_name": "Примерен Next.js проект",
+    "email": "Имейл",
+    "enter_email": "Въведете имейл",
+    "password": "Парола",
+    "enter_password": "Въведете парола",
+    "href_title_placeholder": "Това е заглавие на линк за целите на SEO",
+    "logo": "лого",
+    "logging_in": "Влизане",
+    "registering": "Създаване",
+    "repeat_password": "Въведете отново паролата",
+    "missing_email_password": "Липсващи имейл и парола",
+    "missing_email": "Липсва имейл",
+    "missing_password": "Липсва парола",
+    "missing_repeat_password": "Липсва повторна парола",
+    "no_match_passwords": "Паролата и повторната парола не съвпадат",
+    "logout_error": "Ами сега! Не успяхме да ви разлогнем",
+    "login_error": "Ами сега! Не успяхме да ви логнем",
+    "register_error": "Ами сега! Не успяхме да ви регистрираме",
+    "user_avatar": "Потребителски аватар",
+    "error_404": "Ами сега, страницата не е намерена",
+    "error_500": "Ами сега, възникна грешка на сървъра",
+    "unknown_error": "Ами сега, възникна неизвестна грешка",
+    "go_back": "Назад",
+    "error": "Грешка"
 }
