--- a/public/locales/bg/home.json
+++ b/public/locales/bg/home.json
@@ -1,6 +1,8 @@
 {
-    "greeting": "Поздрави, {{name}}",
-    "subtitle": "Това е замислен да бъде голям корпоративен проект, но засега той е само пример",
-    "info_message": "Ето малко информация, която сме събрали за вас",
-    "info": ""
+    "greeting": "Здравей, {{name}}",
+    "info_message": "Ето малко информация, която сме събрали за теб",
+    "currently_using": "В момента използвате",
+    "browser_on": "браузър на",
+    "meta_description": "Това е описание за началната страница",
+    "current_time": "Вашето местно време е"
 }
