--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,34 @@
 {
-    "friend": "friend"
-}
+    "friend": "friend",
+    "mobile_device": "mobile device",
+    "desktop_device": "desktop device",
+    "log_in": "Log in",
+    "register": "Register",
+    "register_new": "Register a new account",
+    "or": "or",
+    "log_out": "Log out",
+    "project_name": "Next.js example project",
+    "email": "Email",
+    "enter_email": "Enter email",
+    "password": "Password",
+    "enter_password": "Enter password",
+    "href_title_placeholder": "This is an anchor title for SEO purposes",
+    "logo": "logo",
+    "logging_in": "Logging in",
+    "registering": "Registering",
+    "repeat_password": "Repeat password",
+    "missing_email_password": "Missing email and password",
+    "missing_email": "Missing email",
+    "missing_password": "Missing password",
+    "missing_repeat_password": "Missing repeat password",
+    "no_match_passwords": "Password and repeat password don't match",
+    "logout_error": "Oops! We couldn't log you out",
+    "login_error": "Oops! We couldn't log you in",
+    "register_error": "Oops! We couldn't register you",
+    "user_avatar": "User avatar",
+    "error_404": "Oops, page not found",
+    "error_500": "Oops, an error occurred on the server",
+    "unknown_error": "Oops, an unknown error occurred",
+    "go_back": "Go back",
+    "error": "Error"
+}   
