Added route localization changes

--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -30,5 +30,7 @@
     "error_500": "Ами сега, възникна грешка на сървъра",
     "unknown_error": "Ами сега, възникна неизвестна грешка",
     "go_back": "Назад",
-    "error": "Грешка"
+    "error": "Грешка",
+    "user": "Потребител",
+    "home": "Начало"
 }
